Fixed lightbox on mobile devices and fixed the spinner.
Dumped spinner icon in favor of a pure CSS solution.

--- a/src/lightbox/afterglow-lightbox.less
+++ b/src/lightbox/afterglow-lightbox.less
@@ -34,10 +34,7 @@
 			top:0 !important;
 			left:0 !important;
 		}
-
-		.vjs-paused .vjs-big-play-button {
-			display:none;
-		}
+		
 		.vjs-paused.vjs-ended .vjs-big-play-button {
 			display:block;
 		}
