--- a/src/videojs/skin/afterglow/vjs-afterglow.less
+++ b/src/videojs/skin/afterglow/vjs-afterglow.less
@@ -24,7 +24,6 @@
 @volume-high-icon: "\e605";
 @fullscreen-enter-icon: "\e608";
 @fullscreen-exit-icon: "\e609";
-@spinner-icon: "\e604";
 @subtitles-icon: "\e60d";
 @captions-icon: "\e600";
 @lightboxclose-icon: "\e601";
@@ -949,34 +948,22 @@
 	*/
 
 	.vjs-loading-spinner {
-		/* Should be hidden by afterglow *///
-		display: none;
-
 		position: absolute;
 		top: 50%;
 		left: 50%;
+		width: 32px;
+		height: 32px;
+		margin-left: -16px;
+		margin-top: -16px;
+		clear:both;
+		border: 3px rgba(255,255,255,0.1) solid;
+		border-top: 3px rgba(255,255,255,.95) solid;
+		border-radius: 50%;
+		-webkit-animation: spCircRot 1.6s infinite linear;
+		animation: spCircRot 1.6s infinite linear;
 
-		font-family: 'afterglow-icon';
-		font-size: 20px;
-		line-height: 20px;
-
-		width: 30px;
-		height: 30px;
-
-		margin-left: -15px;
-		margin-top: -15px;
-
-		opacity: 0.75;
-
-		&:before {
-			content: @spinner-icon;
-			font-family: 'afterglow-icon';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 20px;
-			height: 20px;
-			text-align: center;
+		&:before{
+			content:none;
 		}
 	}
 
@@ -1634,4 +1621,16 @@ and the native poster can take over */
 	/* border-color-with-alpha *///
 	border-color: @color;
 	border-color: @rgba;
+}
+
+// Spinner animation
+
+		
+@-webkit-keyframes spCircRot {
+	from { -webkit-transform: rotate(0deg); }
+	to { -webkit-transform: rotate(359deg); }
+}
+@keyframes spCircRot {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(359deg); }
 }
